samples/_failures_safe/1761521807_1b700c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_679c6f72.c: In function ‘main’:
./samples/SAFE/__tmp_679c6f72.c:147:13: error: expected declaration or statement at end of input
  147 |             if (add_matrices(&mat1, &mat2, &result)) {
      |             ^~
./samples/SAFE/__tmp_679c6f72.c:147:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_679c6f72.c:147:13: error: expected declaration or statement at end of input
